* Removed extra snooze() for debugging purposes when publishing a device; this   directly reduces the time the mouse cursor is visible but cannot be moved   yet. Based on a patch by Adek336 as part of ticket #917. * Decreased the republishing snooze about a second, too. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42198 a95241bf-73f2-0310-859d-f6bbb57e9c96